图片图层可用

--- a/demo/hecc/index.html
+++ b/demo/hecc/index.html
@@ -70,7 +70,7 @@
 
         var animData = {
             wrapper: document.getElementById('bodymovin'),
-            animType: 'skia',
+            animType: 'canvas',
             loop: true,
             prerender: true,
             autoplay: true,
