--- a/demo/shape/index.html
+++ b/demo/shape/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <!-- <script src="../../node_modules/canvaskit-wasm/bin/canvaskit.js"></script> -->
-    <script src="../../build/player/lottie.js"></script>
+    <script src="../../build/player/lottie_skia.js"></script>
 </head>
 
 <body style="background-color:#ccc; margin: 0px;height: 100%; font-family: sans-serif;font-size: 10px">
