修复shape layer 绘制 bug

--- a/demo/text_glyphs/index.html
+++ b/demo/text_glyphs/index.html
@@ -14,7 +14,7 @@
 
         var animData = {
             wrapper: document.getElementById('bodymovin'),
-            animType: 'canvas',
+            animType: 'skia',
             loop: true,
             prerender: true,
             autoplay: true,
