修改text2测试用例

--- a/demo/text/index.html
+++ b/demo/text/index.html
@@ -14,7 +14,7 @@
 
         var animData = {
             wrapper: document.getElementById('bodymovin'),
-            animType: 'skia',
+            animType: 'canvas',
             loop: true,
             prerender: true,
             autoplay: true,
