--- a/demo/text2/index.html
+++ b/demo/text2/index.html
@@ -2,17 +2,101 @@
 <html style="width: 100%;height: 100%">
 
 <head>
-    <!-- <script src="../../node_modules/canvaskit-wasm/bin/canvaskit.js"></script> -->
-    <script src="../../build/player/lottie_skia.js"></script>
+    <script src="../../node_modules/canvaskit-wasm/bin/canvaskit.js"></script>
+    <!-- <script src="../../build/player/lottie_skia.js"></script> -->
 </head>
 
 <body style="background-color:#ccc; margin: 0px;height: 100%; font-family: sans-serif;font-size: 10px">
 
+    <canvas id=shape1 width=600 height=600></canvas>
     <div style="width:720px;height:1280px;background-color:#333;" id="bodymovin"></div>
 
-    <script>
 
-        var animData = {
+    <script>
+        CanvasKitInit({
+        }).ready().then((CanvasKit) => {
+            fetch('./NotoSerif-Regular.ttf').then((resp) => {
+            resp.arrayBuffer().then((buffer) => {
+                notoserifData = buffer;
+
+                TextShapingAPI1(CanvasKit, notoserifData);
+                //TextShapingAPI2(CanvasKit, notoserifData);
+            });
+        });
+        });
+
+        function TextShapingAPI1(CanvasKit, notoserifData) {
+            if (!notoserifData || !CanvasKit) {
+                return;
+            }
+            const surface = CanvasKit.MakeSWCanvasSurface('shape1');
+            if (!surface) {
+                console.error('Could not make surface');
+                return;
+            }
+            const canvas = surface.getCanvas();
+            const paint = new CanvasKit.SkPaint();
+            paint.setColor(CanvasKit.BLUE);
+            paint.setStyle(CanvasKit.PaintStyle.Stroke);
+
+            const fontMgr = CanvasKit.SkFontMgr.RefDefault();
+            const notoSerif = fontMgr.MakeTypefaceFromData(notoserifData);
+
+            const textPaint = new CanvasKit.SkPaint();
+            const textFont = new CanvasKit.SkFont(notoSerif, 20);
+
+            canvas.drawRect(CanvasKit.LTRBRect(30, 30, 200, 200), paint);
+            canvas.drawText('This text is not shaped, and overflows the boundry',
+                35, 50, textPaint, textFont);
+
+            const shapedText = new CanvasKit.ShapedText({
+                font: textFont,
+                leftToRight: true,
+                text: 'This text *is* shaped, and wraps to the right width.',
+                width: 160,
+            });
+            const textBoxX = 35;
+            const textBoxY = 55;
+            canvas.drawText(shapedText, textBoxX, textBoxY, textPaint);
+            const bounds = shapedText.getBounds();
+
+            bounds.fLeft += textBoxX;
+            bounds.fRight += textBoxX;
+            bounds.fTop += textBoxY;
+            bounds.fBottom += textBoxY
+
+            canvas.drawRect(bounds, paint);
+            const SHAPE_TEST_TEXT = 'VAVAVAVAVAFIfi';
+            const textFont2 = new CanvasKit.SkFont(notoSerif, 60);
+            const shapedText2 = new CanvasKit.ShapedText({
+                font: textFont2,
+                leftToRight: true,
+                text: SHAPE_TEST_TEXT,
+                width: 600,
+            });
+
+            canvas.drawText('no kerning ↓', 10, 240, textPaint, textFont);
+            canvas.drawText(SHAPE_TEST_TEXT, 10, 300, textPaint, textFont2);
+            canvas.drawText(shapedText2, 10, 300, textPaint);
+            canvas.drawText('kerning ↑', 10, 390, textPaint, textFont);
+
+            surface.flush();
+
+            paint.delete();
+            notoSerif.delete();
+            textPaint.delete();
+            textFont.delete();
+            shapedText.delete();
+            textFont2.delete();
+            shapedText2.delete();
+
+            surface.delete();
+        }
+
+
+
+
+        /* var animData = {
             wrapper: document.getElementById('bodymovin'),
             animType: 'canvas',
             loop: true,
@@ -21,7 +105,7 @@
             path: 'data.json'
 
         };
-        var anim = bodymovin.loadAnimation3(animData);
+        var anim = bodymovin.loadAnimation3(animData); */
     </script>
 </body>
 
