--- a/demo/happy2016/index.html
+++ b/demo/happy2016/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html style="width: 100%;height: 100%">
 <head>
-     <script src="../../build/player/lottie.js"></script>
+     <script src="../../build/player/lottie_skia.js"></script>
 </head>
 <body style="background-color:#ccc; margin: 0px;height: 100%; font-family: sans-serif;font-size: 10px">
 
@@ -11,14 +11,14 @@
 
     var animData = {
         wrapper: document.getElementById('bodymovin'),
-        animType: 'html',
+        animType: 'skia',
         loop: true,
         prerender: true,
         autoplay: true,
         path: 'data.json'
 
     };
-    var anim = bodymovin.loadAnimation(animData);
+    var anim = bodymovin.loadAnimation3(animData);
 </script>
 </body>
 </html>
