--- a/demo/bodymovin/index.html
+++ b/demo/bodymovin/index.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html style="width: 100%;height: 100%">
 <head>
-     <script src="../../build/player/lottie.js"></script>
+     <script src="../../build/player/lottie_skia.js"></script>
 </head>
 <body style="background-color:#ccc; margin: 0px;height: 100%; font-family: sans-serif;font-size: 10px">
 
-<div style="width:100%;height:100%;background-color:#333;" id="bodymovin"></div>
+<div style="width:720px;height:1280px;background-color:#333;" id="bodymovin"></div>
 
 <script>
 
     var animData = {
         wrapper: document.getElementById('bodymovin'),
-        animType: 'html',
+        animType: 'skia',
         loop: true,
         prerender: true,
         autoplay: true,
         path: 'data.json'
 
     };
-    var anim = bodymovin.loadAnimation(animData);
+    var anim = bodymovin.loadAnimation3(animData);
 </script>
 </body>
 </html>
