--- a/demo/happy2016/index.html
+++ b/demo/happy2016/index.html
@@ -5,7 +5,7 @@
 </head>
 <body style="background-color:#ccc; margin: 0px;height: 100%; font-family: sans-serif;font-size: 10px">
 
-<div style="width:100%;height:100%;background-color:#333;" id="bodymovin"></div>
+<div style="width:720px;height:1280px;background-color:#333;" id="bodymovin"></div>
 
 <script>
 
