--- a/demo/hecc/index.html
+++ b/demo/hecc/index.html
@@ -8,7 +8,7 @@
 
 <body style="background-color:#ccc; margin: 0px;height: 100%; font-family: sans-serif;font-size: 10px">
 
-    <div style="width:50%;height:50%;background-color:#333;" id="bodymovin"></div>
+    <div style="width:360px;height:640px;background-color:#333;" id="bodymovin"></div>
     <!-- <canvas style="width:50%;height:50%;background-color:#333;" id="canvas"></canvas> -->
 
     <script>
