--- a/ffmpeg/index.html
+++ b/ffmpeg/index.html
@@ -14,7 +14,7 @@
              var bb = new Blob(['video data'], { type: "text/plain" });
              var bb2 = new Blob([new ArrayBuffer(10)], { type: "application/octet-binary" });
              if (data.type == 'init') {
- 
+
                  var req = {
                      type: 'load',
                      args: {
@@ -69,7 +69,7 @@
                         break;
                     case 'loaded':
                         var req = {
-                            type: 'frame',
+                            type: 'next',
                             args: {
                                 time: 0
                             }
@@ -77,7 +77,7 @@
                         worker.postMessage(req);
 
                         break;
-                    case 'framed':
+                    case 'renext':
                         break;
                     default:
                         break;
