添加视频素材 seek 0

--- a/ffmpeg/index.html
+++ b/ffmpeg/index.html
@@ -78,6 +78,12 @@
 
                         break;
                     case 'renext':
+                        worker.postMessage({
+                            type: 'seek',
+                            args: {
+                                timestamp: 0
+                            }
+                        });
                         break;
                     default:
                         break;
