--- a/demo/image/index.html
+++ b/demo/image/index.html
@@ -18,7 +18,11 @@
             loop: true,
             prerender: true,
             autoplay: true,
-            path: 'data.json'
+            path: 'data.json',
+            rendererSettings: {
+                dpr: 1.0
+            }
+
 
         };
         var anim = bodymovin.loadAnimation3(animData);
